--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Cinzel', serif;
+    font-family: 'Norse', serif;
     margin: 0;
     padding: 0;
     background-color: #2E4D34; /* Verde Bosque */
