--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
     background-color: #2E4D34; /* Verde Bosque */
     color: #F5F5F5;
     line-height: 1.6;
+    font-size: larger;
 }
 
 /* Hero Section */
